--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+4.0
+Now the code is more modular!
+Cleaned it up ALOT
+Redefined and cleaned build functions
+Added R support
+Added (partly-missing) full Q support
+Separated working directory for both local and server support
+Added more variables check
+
 3.2
 Almost fully code rewrite
 Split code in 3 different parts
